syntax = "proto3";

package services;

// Weather service definition
service WeatherService {
    // Retrieve the weather 
    rpc GetWeather(LocationAndDate) returns (Weather) {}
}

// The message containing the location and date
message LocationAndDate {
    string location = 1;
    string date = 2;
}

// The response message containing weather data
message Weather {
    map<string, string> data = 2;
}